--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -75,6 +75,6 @@
     </ul>
     <!-- 페이징처리 끝 -->
     <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
-    <a href="{% url 'pybo:intro_index' %}" class="btn btn-primary">테스트 버튼</a>
+    <a href="{% url 'pybo:intro_index' %}" class="btn btn-info">INTRO PAGE</a>
 </div>
 {% endblock %}
