포켓몬상 테스트 추가

--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -76,5 +76,6 @@
     <!-- 페이징처리 끝 -->
     <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
     <a href="{% url 'pybo:intro_index' %}" class="btn btn-info">INTRO PAGE</a>
+    <a href="{% url 'pybo:pokemon' %}" class="btn btn-info">포켓몬상 테스트</a>
 </div>
 {% endblock %}
